tests/baselines/reference/recursiveBaseCheck4.errors.txt
==== tests/cases/compiler/recursiveBaseCheck4.ts (2 errors) ====
    class M<T> extends M<string> { }
          ~
!!! error TS2100: Class 'M<T>' is recursively referenced as a base type of itself.
    (new M).blah;
            ~~~~
!!! error TS2094: The property 'blah' does not exist on value of type 'M<{}>'.